--- a/package.json
+++ b/package.json
@@ -9,12 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@notionhq/client": "^2.2.10",
+    "dotenv": "^16.3.1",
     "next": "13.4.12",
+    "next-themes": "^0.2.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-lottie-player": "^1.5.4"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.14",
     "eslint": "8.46.0",
-    "eslint-config-next": "13.4.12"
+    "eslint-config-next": "13.4.12",
+    "tailwindcss": "^3.3.3"
   }
 }
